# MediaAnalyzer

./: .gitignore  Dockerfile  Dockerfile.build  Makefile  Pipfile  README.md  docker-entrypoint.sh  finish_store-deployment.yaml  infrastructure.yaml  media_analyzer.yaml  processing.yaml  requirements.txt  setup.cfg  setup.py
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
media_analyzer/: api_keys.ini.secret  apis.py  app.py  backup.py  database.ini  database.py  exceptions.py  queue.py
media_analyzer/core/: process.py  publish.py  publishers.ini  publishers.py  pull.py  puller.py  sentiment_analysis.py  store.py  top_news.py  topic_detection.py  topics.ini  tweet.avsc  upload.py
media_analyzer/static/: languages_chart.js  topics_chart.js
media_analyzer/static/js/: publishers.js  thirty_days_topics_chart.js  token_evolution.js  tokens_weekly_count.js  topics_chart.js
media_analyzer/templates/: chart.html  db_stats.html  index.html  publishers.html  search_engine.html  token_evolution.html
tests/: conftest.py  test_database.py  test_load_parser.py  test_queue.py  test_topic_detection.py  tweets.csv  utils.py
tests/core/: records.json  test_puller.py  test_upload.py
