[metadata]
name = media-analyzer
description-file = README.md
author=Yann Colina
author-email=yanncolina@gmail.com
home-page = "https://github.com/nyancol/MediaAnalyzer"
license='MIT License'
classifiers=
    'Operating System :: MacOS :: MacOS X'
    'Operating System :: POSIX :: Linux'
    'Programming Language :: Python :: 3.5'
    'Programming Language :: Python :: 3.6'

[files]
packages =
    media_analyzer
data_files = media_analyzer/ = ./*
#     media_analyzer = media_analyzer.api_keys.ini

[entry_points]
console_scripts =
    publisher_select=media_analyzer.core.publish:main
    pull_tweets=media_analyzer.core.pull:main
    process_tweets=media_analyzer.core.process:main
    store_records=media_analyzer.core.store:main
